Bug 688308 - Error: undefined; OffendingCommand: .type1execchar
Summary: Error: undefined; OffendingCommand: .type1execchar
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PS Interpreter (show other bugs)
Version: 8.51
Hardware: PC Windows XP
: P3 normal
Assignee: leonardo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-09-21 01:57 UTC by Jacob Schäffer
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
Test files etc. (6.19 MB, application/x-zip-compressed)
2005-09-21 02:09 UTC, Jacob Schäffer
Details
Results (3.62 MB, application/x-zip-compressed)
2005-09-21 02:20 UTC, Jacob Schäffer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jacob Schäffer 2005-09-21 01:57:08 UTC
I have several PostScript jobs that cause the following error with GS:

%%[ Error: undefined; OffendingCommand: .type1execchar ]%%
AFPL Ghostscript 8.51: Unrecoverable error, exit code 1

The same PS files runs perfectly well with Distiller 5.X, 6.X and 7.X.

The element that fail is originally created exported to PDF 1.4 from InDesign. 
The PDF is then placed into Adobe FrameMaker and printed to PostScript.

Test files will be uploaded ASAP.

- Jacob
Comment 1 Jacob Schäffer 2005-09-21 02:09:04 UTC
Created attachment 1688 [details]
Test files etc.
Comment 2 Jacob Schäffer 2005-09-21 02:20:21 UTC
Created attachment 1689 [details]
Results
Comment 3 Jacob Schäffer 2005-09-28 00:22:17 UTC
I've just run a similar job (i.e. NOT the physical test files, but a job that 
trigger the exact same error messages with 8.51) with AFPL Ghostscript 8.50.

To my surprise, 8.50 did NOT trigger any errors at all.

Comment 4 leonardo 2005-10-11 04:13:13 UTC
Reproduced with HEAD.
Comment 5 leonardo 2005-10-12 11:02:19 UTC
Patch to HEAD :
http://ghostscript.com/pipermail/gs-cvs/2005-October/005768.html