gs/src/gsdevice.c
@@ -457,6 +457,13 @@ gs_make_null_device(gx_device_null *dev_null, gx_device *dev,
     }
 }
 
+/* Is a null device ? */
+bool gs_is_null_device(gx_device *dev)
+{
+    /* Assuming null_fill_path isn't used elswhere. */
+    return dev->procs.fill_path == gs_null_device.procs.fill_path;
+}
+
 /* Mark a device as retained or not retained. */
 void
 gx_device_retain(gx_device *dev, bool retained)
